syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 128
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message GetCompoundDataReq {
}
