syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 122
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message PlayerCompoundMaterialReq {
	uint32 compound_id = 9;
	uint32 count = 1;
}
