syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 146
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message TakeCompoundOutputReq {
	uint32 compound_id = 12;
	uint32 compound_group_id = 8;
}
